lab 8 start - pandas library

--- a/Module 2 - DS Fundamentals/Labs/001-numpy-lab.ipynb
+++ b/Module 2 - DS Fundamentals/Labs/001-numpy-lab.ipynb
@@ -578,8 +578,270 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "441643d6-1f8a-4719-acac-28a08407fce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x_arr = np.array([1,2,3.23], dtype = \"int\")\n",
+    "print(x_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c389211e-93b1-41ba-ba1e-1c8ecf64bcde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 3. 4. 5.]\n",
+      " [2. 3. 1. 2.]\n",
+      " [5. 4. 5. 6.]]\n",
+      "\n",
+      " [[2. 3. 1. 2.]\n",
+      " [5. 4. 5. 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr6 = np.array([[2,3,4,5],[2,3,1,2],[5,4,5,6]], dtype = 'float64')\n",
+    "print(arr6)\n",
+    "print(\"\\n\",arr6[1:3, :4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b1d0b648-670b-4a51-aef9-0513efecb986",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "[[1. 1. 1. 1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1. 1. 1. 1.]]\n",
+      "\n",
+      "\n",
+      "\n",
+      "[[1. 1.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr9 = np.ones((5,8))\n",
+    "print(arr9)\n",
+    "\n",
+    "# first two rows \n",
+    "print(\"\\n\\n\")\n",
+    "print(arr9[:2 ])\n",
+    "\n",
+    "# last 2 elements\n",
+    "print(\"\\n\\n\")\n",
+    "print(arr9[4:,6:])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "45c574a2-527d-44f2-bdc9-4b532800065a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 3. 4. 5.]\n",
+      " [2. 3. 1. 2.]\n",
+      " [5. 4. 5. 6.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr10 = np.array([[2,3,4,5],[2,3,1,2],[5,4,5,6]], dtype = 'float64')\n",
+    "print(arr6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f81a302c-fc8c-41af-a626-68baa86a3820",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max :  6.0\n",
+      "location :  11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"max : \",arr10.max())\n",
+    "print(\"location : \", arr10.argmax())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2be0696f-65b7-4da0-9ec3-2225eeb7ba84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "min :  1.0\n",
+      "location :  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"min : \",arr10.min())\n",
+    "print(\"location : \", arr10.argmin())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "09e363f9-1bb8-4d99-93f8-7168fbfdce68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 5 4 3 2 1]\n",
+      "[5 8 9 8 5]\n",
+      "[ 5 10 15 20 25 25 20 15 10  5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr11 = np.array([1,2,3,4,5])\n",
+    "arr12 = np.array([5,4,3,2,1])\n",
+    "arr13 = np.concatenate((arr11,arr12))\n",
+    "print(arr13)\n",
+    "print(arr11 * arr12)\n",
+    "print(5 * arr13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "be6173b7-220a-4e0a-84f5-ff8541551004",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.dot(arr11,arr12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "8d76ca94-75a9-4c0b-a152-fc6f7ff08220",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "120be7f6-fc32-4324-bbac-3fad06014c40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.         1.03517588 1.07035176 1.10552764 1.14070352 1.1758794\n",
+      " 1.21105528 1.24623116 1.28140704 1.31658291 1.35175879 1.38693467\n",
+      " 1.42211055 1.45728643 1.49246231 1.52763819 1.56281407 1.59798995\n",
+      " 1.63316583 1.66834171 1.70351759 1.73869347 1.77386935 1.80904523\n",
+      " 1.84422111 1.87939698 1.91457286 1.94974874 1.98492462 2.0201005\n",
+      " 2.05527638 2.09045226 2.12562814 2.16080402 2.1959799  2.23115578\n",
+      " 2.26633166 2.30150754 2.33668342 2.3718593  2.40703518 2.44221106\n",
+      " 2.47738693 2.51256281 2.54773869 2.58291457 2.61809045 2.65326633\n",
+      " 2.68844221 2.72361809 2.75879397 2.79396985 2.82914573 2.86432161\n",
+      " 2.89949749 2.93467337 2.96984925 3.00502513 3.04020101 3.07537688\n",
+      " 3.11055276 3.14572864 3.18090452 3.2160804  3.25125628 3.28643216\n",
+      " 3.32160804 3.35678392 3.3919598  3.42713568 3.46231156 3.49748744\n",
+      " 3.53266332 3.5678392  3.60301508 3.63819095 3.67336683 3.70854271\n",
+      " 3.74371859 3.77889447 3.81407035 3.84924623 3.88442211 3.91959799\n",
+      " 3.95477387 3.98994975 4.02512563 4.06030151 4.09547739 4.13065327\n",
+      " 4.16582915 4.20100503 4.2361809  4.27135678 4.30653266 4.34170854\n",
+      " 4.37688442 4.4120603  4.44723618 4.48241206 4.51758794 4.55276382\n",
+      " 4.5879397  4.62311558 4.65829146 4.69346734 4.72864322 4.7638191\n",
+      " 4.79899497 4.83417085 4.86934673 4.90452261 4.93969849 4.97487437\n",
+      " 5.01005025 5.04522613 5.08040201 5.11557789 5.15075377 5.18592965\n",
+      " 5.22110553 5.25628141 5.29145729 5.32663317 5.36180905 5.39698492\n",
+      " 5.4321608  5.46733668 5.50251256 5.53768844 5.57286432 5.6080402\n",
+      " 5.64321608 5.67839196 5.71356784 5.74874372 5.7839196  5.81909548\n",
+      " 5.85427136 5.88944724 5.92462312 5.95979899 5.99497487 6.03015075\n",
+      " 6.06532663 6.10050251 6.13567839 6.17085427 6.20603015 6.24120603\n",
+      " 6.27638191 6.31155779 6.34673367 6.38190955 6.41708543 6.45226131\n",
+      " 6.48743719 6.52261307 6.55778894 6.59296482 6.6281407  6.66331658\n",
+      " 6.69849246 6.73366834 6.76884422 6.8040201  6.83919598 6.87437186\n",
+      " 6.90954774 6.94472362 6.9798995  7.01507538 7.05025126 7.08542714\n",
+      " 7.12060302 7.15577889 7.19095477 7.22613065 7.26130653 7.29648241\n",
+      " 7.33165829 7.36683417 7.40201005 7.43718593 7.47236181 7.50753769\n",
+      " 7.54271357 7.57788945 7.61306533 7.64824121 7.68341709 7.71859296\n",
+      " 7.75376884 7.78894472 7.8241206  7.85929648 7.89447236 7.92964824\n",
+      " 7.96482412 8.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# arr14 = 5 * arr13\n",
+    "# print(arr14)\n",
+    "print(np.linspace(1,8,200))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0783f6f-76c4-40df-bebd-c86f93ea97db",
    "metadata": {},
    "outputs": [],
    "source": []
