--- a/Module 2 - DS Fundamentals/Labs/003-100_Numpy_exercises.ipynb
+++ b/Module 2 - DS Fundamentals/Labs/003-100_Numpy_exercises.ipynb
@@ -2,14 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c1222ff",
-   "metadata": {},
-   "source": [
-    " 1. Import the numpy package under the name `np` (★☆☆)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a167c052",
    "metadata": {},
    "source": [
@@ -18,20 +10,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d9f4753",
+   "id": "3c1222ff",
    "metadata": {},
    "source": [
-    "2. Print the numpy version and the configuration (★☆☆)"
+    " 1. Import the numpy package under the name `np` (★☆☆)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f52e6a0b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d9f4753",
+   "metadata": {},
+   "source": [
+    "2. Print the numpy version and the configuration (★☆☆)"
    ]
   },
   {
@@ -703,11 +703,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "faed6e2b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0]\n",
+      " [1 0 0 0 0]\n",
+      " [0 2 0 0 0]\n",
+      " [0 0 3 0 0]\n",
+      " [0 0 0 4 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr13 = np.diag([1, 2, 3, 4], k=-1)\n",
+    "print(arr13)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -719,11 +734,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ed150400",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr14 = np.indices((8,8)).sum(axis=0) % 2\n",
+    "arr14"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -735,11 +771,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3782b5a9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinates for 100th element are : (np.int64(1), np.int64(5), np.int64(4))\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr15 = np.random.random((6, 7, 8))\n",
+    "index_100 = 100\n",
+    "i, j, k = np.unravel_index(index_100, arr15.shape)\n",
+    "print(\"Coordinates for 100th element are :\",(i,j, k))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -751,11 +800,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4c07477c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0],\n",
+       "       [0, 1, 0, 1, 0, 1, 0, 1],\n",
+       "       [1, 0, 1, 0, 1, 0, 1, 0]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr16 = np.array([[0,1],\n",
+    "                  [1,0]])\n",
+    "arr16_2 = np.tile(arr16, (4,4))\n",
+    "arr16_2\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -767,11 +841,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "cea6c993",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.         0.04166667 0.08333333 0.125      0.16666667]\n",
+      " [0.20833333 0.25       0.29166667 0.33333333 0.375     ]\n",
+      " [0.41666667 0.45833333 0.5        0.54166667 0.58333333]\n",
+      " [0.625      0.66666667 0.70833333 0.75       0.79166667]\n",
+      " [0.83333333 0.875      0.91666667 0.95833333 1.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr17 = np.arange(1,26).reshape(5,5)\n",
+    "min_value = np.min(arr17)\n",
+    "max_value = np.max(arr17)\n",
+    "\n",
+    "arr17_normalized = (arr17 - min_value) / (max_value - min_value)\n",
+    "\n",
+    "print(arr17_normalized)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -783,11 +878,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "d165044b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype([('r', 'u1'), ('g', 'u1'), ('b', 'u1'), ('a', 'u1')])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rgba_dtype = np.dtype([\n",
+    "    ('r', np.uint8),  # Red component\n",
+    "    ('g', np.uint8),  # Green component\n",
+    "    ('b', np.uint8),  # Blue component\n",
+    "    ('a', np.uint8)   # Alpha component\n",
+    "])\n",
+    "\n",
+    "colors = np.array([[ 11, 216, 221, 123],\n",
+    "                   [ 98, 158, 230, 246],\n",
+    "                   [ 44, 254, 186, 190],\n",
+    "                   [155, 196, 249, 163]], dtype = rgba_dtype)\n",
+    "colors.dtype\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -799,11 +918,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "6a42619f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2020  605]\n",
+      " [1544  415]\n",
+      " [2461  954]\n",
+      " [ 965  753]\n",
+      " [1849  531]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr18 = np.random.randint(1,50,15).reshape(5,3)\n",
+    "arr19 = np.random.randint(1,50,6).reshape(3,2)\n",
+    "print(np.dot(arr18,arr19))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -815,11 +950,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "e4b39c03",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 3 3 1 9 4 9 7 8 8 5 5 8 5 8 5 3 2 8 4]\n",
+      "[ 9  3  3  1  9 -4  9 -7  8  8 -5 -5  8 -5  8 -5  3  2  8 -4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr20 = np.random.randint(1,10,20)\n",
+    "\n",
+    "print(arr20)\n",
+    "\n",
+    "arr20[(arr20 > 3) & (arr20 < 8)] *= -1\n",
+    "\n",
+    "print(arr20)\n"
+   ]
   },
   {
    "cell_type": "markdown",
